testing processor to convert ports to application

--- a/telegraf.conf
+++ b/telegraf.conf
@@ -99,6 +99,31 @@
   ## If set to true, do no set the "host" tag in the telegraf agent.
   omit_hostname = false
 
+[[processors.enum]]
+  [[processors.enum.mapping]]
+    ## Name of the field to map
+    #field = "SrcPrt"
+
+    ## Name of the tag to map
+    tag = "SrcPort"
+
+    ## Destination tag or field to be used for the mapped value.  By default the
+    ## source tag or field is used, overwriting the original value.
+    dest = "SrcPort_application"
+
+    ## Default value to be used for all values not contained in the mapping
+    ## table.  When unset and no match is found, the original field will remain 
+    ## unmodified and the destination tag or field will not be created.
+    # default = 0
+
+    ## Table of mappings
+    [processors.enum.mapping.value_mappings]
+      80   = "http"
+      3000 = "grafana"
+      22   = "ssh"
+      123  = "toto"
+
+
 ###############################################################################
 #                            OUTPUT PLUGINS                                   #
 ###############################################################################
